# hospital-appointment-ai-agent

./: .env  .gitignore  LICENSE  README.md  app.py  appointments_db.db  database.py  dummB.py  frontend.py  main.py  pyproject.toml  render.yaml  requirements.txt  test.py
services/: specialty_normalizer.py  time_parser.py
